log
Wed 03 May 2023 01:58:33 PM UTC: 
 tests:  0|5
total_score: 0/70
9a7f71c
Wed 03 May 2023 02:52:55 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9582a8e
Wed 03 May 2023 07:08:13 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++----
 1 file changed, 21 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:28: error: suggest parentheses around comparison in operand of ‘&’ [-Werror=parentheses]
   64 |           if(n->sudo[j][k] == 0 & num == 0)
      |              ~~~~~~~~~~~~~~^~~~
sudoku.c: At top level:
sudoku.c:75:3: error: expected identifier or ‘(’ before ‘return’
   75 |   return list;
      |   ^~~~~~
sudoku.c:76:1: error: expected identifier or ‘(’ before ‘}’ token
   76 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:3: error: control reaches end of non-void function [-Werror=return-type]
   73 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
6de64ef
Wed 03 May 2023 07:08:36 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c:75:3: error: expected identifier or ‘(’ before ‘return’
   75 |   return list;
      |   ^~~~~~
sudoku.c:76:1: error: expected identifier or ‘(’ before ‘}’ token
   76 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:3: error: control reaches end of non-void function [-Werror=return-type]
   73 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
e2f0035
